force-app/main/default/objects/Tcs__c/Tcs__c.object-meta.xml
<CustomObject>
    <label>Tcs</label>
    <nameField>
        <label>Tcs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tcs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>