force-app/main/default/objects/Tcs__c/fields/Amazon_Info__c.field-meta.xml
<CustomField>
    <fullName>Amazon_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Amazon_Info</label>
    <referenceTo>BRE_Organisation__c</referenceTo>
    <relationshipLabel>Tcs</relationshipLabel>
    <relationshipName>Tcs</relationshipName>
    <type>Lookup</type>
</CustomField>