force-app/main/default/objects/Tcs__c/fields/Service_ID__c.field-meta.xml
<CustomField>
    <fullName>Service_ID__c</fullName>
    <label>Service ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>